--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@ body {
 }
 
 .body_wrapper {
-    width: 70%;
-    height: 100vh;
-    margin: 2rem auto;
+  width: 70%;
+  height: 100vh;
+  margin: 2rem auto;
 }
 
 nav {
@@ -29,7 +29,7 @@ nav {
   border: 1px solid #e0e0e0;
   border-radius: 7px;
   margin: 0 0 2rem;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
 nav ul {
@@ -40,6 +40,7 @@ nav ul {
   gap: 10px;
   padding: 10px;
 }
+
 nav li {
   display: flex;
   align-items: center;
@@ -49,12 +50,14 @@ nav li {
   color: #6a6262;
   font-size: 1.1rem;
 }
+
 nav li:first-child {
   background-color: rgb(158, 247, 228);
   padding: 0.4rem;
   border-radius: 5px;
   font-weight: 800;
 }
+
 nav li:nth-child(3) {
   background-color: rgb(97, 99, 97);
   color: #fff;
