--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ body {
   align-items: center;
   padding: 0.5rem 0;
   background-color: #fafafa;
+  animation: fadeIn 3s;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 .body_wrapper {
@@ -59,9 +65,6 @@ nav li:first-child {
 }
 
 nav li:nth-child(3) {
-  background-color: rgb(97, 99, 97);
-  color: #fff;
-  border-radius: 50%;
   padding: 0.4rem;
 }
 
@@ -74,6 +77,17 @@ nav li:nth-child(3),
 nav li:nth-child(4) {
   border-left: 1px solid #c8c6c6;
   padding-left: 0.5rem;
+}
+
+nav img {
+  width: 20px;
+  height: 20px;
+  transition: 0.3s ease-in-out;
+}
+
+
+nav img:hover{
+  transform: scale(1.2);
 }
 
 .details_container{
@@ -90,4 +104,160 @@ nav li:nth-child(4) {
 .details_container p {
     color: #6d6868;
     line-height: 2;
+}
+
+.textArea{
+  max-width: 100%;
+  width: 100%;
+  white-space: pre-wrap;
+  padding: 0.5rem 0;
+  word-break: break-word;
+  caret-color: #37352f;
+  color: #222;
+  cursor: text;
+  position: relative;
+  border: none;
+  background: #fafafa;;
+}
+
+.textArea:focus{
+  outline: none;
+}
+
+.textArea::placeholder {
+  color: #37352f;
+  font-size: 1rem;
+}
+
+[contenteditable]:empty::before {
+  content: attr(placeholder);
+  color: #37352f80;
+}
+
+.popup_container {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 20rem;
+  height: 15rem;
+  background-color:  #000;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow-y: scroll;
+}
+
+.popup_container::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.popup_container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.popup_container::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.popup_container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.heading_popup {
+  padding: 1rem 0.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.list_popup {
+  padding: 0.5rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.popup_item {
+  background: none;
+  border: none;
+  outline: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  color: #fff;
+}
+
+.popup_item:hover,
+.popup_item:focus,
+.popup_item:active {
+  background-color: rgb(139, 136, 136);
+  outline: none;
+}
+
+.popup_item div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.popup_item p {
+  font-size: 0.8rem;
+  margin-top: 0.2rem;
+}
+
+
+.h1 {
+  font-size: 2rem;
+  color: rgb(239, 21, 178);
+  font-weight: 700;
+}
+
+.h2 {
+  font-size: 1.5rem;
+  color: blue;
+  font-weight: 600;
+}
+
+.h3 {
+  font-size: 1.25rem;
+  color: rgb(24, 189, 93);
+  font-weight: 500;
+}
+
+.h4 {
+  font-size: 1.125rem;
+  color: rgb(28, 173, 236);
+  font-weight: 500;
+}
+
+.h5 {
+  font-size: 1rem;
+  color: rgb(197, 232, 40);
+  font-weight: 500;
+}
+
+.h6 {
+  font-size: 0.875rem;
+  color: rgb(255, 0, 0);
+  font-weight: 500;
+}
+
+.p {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.hidden {
+  display: none;
+}
+
+@media only screen and (max-width: 768px){
+  nav img {
+    width: 15px;
+    height: 15px;
+  }
+  
 }
